--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Native JS</title>
+
+    <!-- Lato font -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet">
+
+    <!-- fontawesome -->
+    <link href="css/fontawesome-all.min.css" rel="stylesheet">
+    <script defer src="js/fontawesome-all.min.js" crossorigin="anonymous"></script>
+
+    <link href="css/style.css" rel="stylesheet">
+    <script defer src="js/script.js"></script>
 </head>
 <body>
+<main>
 
+</main>
 </body>
 </html>
