--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
 </head>
 <body>
 <main>
